# noise-algebra

./: Cargo.toml  README.md
benches/: noise.rs
src/: fake_noise.rs  lib.rs  noise.rs  perlin.rs  simplex.rs
src/algebra/: _is_same.rs  add.rs  cap.rs  erode.rs  exp.rs  grad.rs  mask.rs  max.rs  min.rs  mod.rs  mul.rs  norm.rs  not.rs  pos.rs  powf.rs  powi.rs  quantize.rs  sub.rs  threshold.rs
src/sources/: fake_noise.rs  mod.rs  perlin.rs
src/sources/simd/: mod.rs  simplex.rs
