[package]
name = "noise-algebra"
version = "0.1.28"
edition = "2021"
license = "Unlicense"
description = "Easy manipulation of noise functions"
repository = "https://github.com/Inspirateur/noise-algebra"
keywords = ["noise", "procedural", "generation", "simplex", "perlin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
noise = "0.9"
simdnoise = "3.1"
ndarray = "0.16"
itertools = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "noise"
harness = false
